[package]
name = "kefli"
version = "0.1.0"
edition = "2021"
authors = ["Ipeglin"]
license = "MIT OR Apache-2.0"
description = "Consensus-Based Auction Algorithm (CBAA) and Consensus-Based Bundle Algorithm (CBBA) implementations for distributed task allocation"
repository = "https://github.com/ipeglin/kefli"
keywords = ["consensus", "distributed", "task-allocation", "cbaa", "cbba"]
categories = ["algorithms", "science::robotics"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
# Dependencies only used for tests and examples

[features]
default = []
serde = ["dep:serde"]

[[example]]
name = "elevator_system"
path = "examples/elevator_system.rs"

[[example]]
name = "simple_auction"
path = "examples/simple_auction.rs"
