[package]
name = "cbbadds"
version = "0.1.0"
edition = "2024"
description = "Consensus-Based Auction Algorithm (CBAA) and Consensus-Based Bundle Algorithm (CBBA) implementations for distributed task allocation"
readme = "README.md"

[dependencies]
anyhow = "1"
bincode = "2"
byteorder = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
env_logger = "0.11"
futures = "0.3"
image = "0.25"
log = "0.4"
plotters = "0.3"
rand = "0.9"
rustdds = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
glob = "0.3"


[dev-dependencies]
# Dependencies only used for tests and examples

[[example]]
name = "sim_sat"
path = "examples/ex1/sim_sat.rs"

[[example]]
name = "ex2_dds_agent"
path = "examples/ex2/dds_agent.rs"

[[example]]
name = "ex2_dds_syncer"
path = "examples/ex2/dds_syncer.rs"
[[example]]
name = "ex2_dds_runner"
path = "examples/ex2/dds_runner.rs"

[[example]]
name = "ex3_dds_agent"
path = "examples/ex3/dds_agent.rs"

[[example]]
name = "ex3_dds_syncer"
path = "examples/ex3/dds_syncer.rs"

[[example]]
name = "ex3_dds_runner"
path = "examples/ex3/dds_runner.rs"

[[example]]
name = "ex3_dds_inproc_runner"
path = "examples/ex3/dds_inproc_runner.rs"